--- a/smartincludes.cabal
+++ b/smartincludes.cabal
@@ -10,7 +10,7 @@ build-type:          Simple
 
 executable smartincludes
   main-is:             Main.hs
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base
                      , text
                      , bifunctors
                      , attoparsec
@@ -19,5 +19,4 @@ executable smartincludes
   default-language:    Haskell2010
   ghc-options: -Wall
   build-tools:         hlint
-                     , hindent
                      , cabal-install
