--- a/smartincludes.cabal
+++ b/smartincludes.cabal
@@ -16,6 +16,7 @@ executable smartincludes
                      , attoparsec
                      , vector
                      , optparse-applicative
+                     , filepath
   default-language:    Haskell2010
   ghc-options: -Wall
   build-tools:         hlint
